--- a/FAQ.html
+++ b/FAQ.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="Index.html">Inicio</a>
+              <a class="nav-link" href="Index.php">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Bordados.html">Bordados</a>
