--- a/Carrinho.html
+++ b/Carrinho.html
@@ -51,8 +51,7 @@
           </ul>
       </nav>
       
-      <form action="calcula-frete.php"
-        <input type="submit" value="clique aqui"/>
+      <form action="calcula-frete.php">
     </form>
 
     </div>
